--- a/index.html
+++ b/index.html
@@ -28,6 +28,17 @@
         #root {
             margin:2em 5%;
         }
+        select.set-category {
+            width:25%;
+            padding:0.5em;
+        }
+        form.add-product > div{
+            width: 47.5%;
+            margin: 1em 0 1em 2.5%;
+        }
+        form.add-product > div:first-child{
+            margin: 1em 2.5% 1em 0;
+        }
         .products-list {
             list-style-type: square;
             margin:1em;
